# sway-remote-unlock

./: .gitignore  Cargo.toml  Design.md  flake.nix
src/cli/: args.rs  commands.rs  main.rs
src/cli/commands/: begin_enroll.rs  generate_keys.rs  mod.rs
src/server/: code_buffer.rs  context.rs  discovery.rs  logging.rs  main.rs  router.rs  socket.rs  state.rs
src/server/backends/: mod.rs  swaylock.rs
src/server/routes/: enroll.rs  mod.rs  not_found.rs  route.rs  unlock.rs
src/shared/: config.rs  enroll_request.rs  enroll_response.rs  enrollment_code.rs  errors.rs  helper_types.rs  lib.rs  messages.rs  net.rs  pubkey.rs  unlock_request.rs
src/shared/crypto/: der.rs  key.rs  mod.rs  pem.rs
src/shared/crypto/der/: mod.rs  types.rs
src/shared/net/: headers.rs  method.rs  mod.rs  request.rs  response.rs  status.rs
src/shared/types/: byte_array.rs  error.rs  mod.rs  own_error.rs
test_data/: bak_pem_test  bak_pem_test.pub  der_expected_key  der_test  pem_expected_private_key  pem_expected_public_key  pem_test  pem_test.pub
